# activitysim-longdistance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
longdistance/: __init__.py  ldt_accessibility.py  ldt_create_longdist_trips.py  ldt_external_destchoice.py  ldt_external_mode_choice.py  ldt_internal_external.py  ldt_internal_mode_choice.py  ldt_internal_tour_destination.py  ldt_pattern.py  ldt_pattern_household.py  ldt_pattern_person.py  ldt_scheduling.py  ldt_tour_gen.py  ldt_tour_gen_household.py  ldt_tour_gen_person.py
longdistance/util/: logsums.py  tour_destination.py
prototype_ohio_ldt/: README.md  Untitled.ipynb  go.py
prototype_ohio_ldt/configs/: accessibility.csv  accessibility.yaml  annotate_accessibility.csv  annotate_households.csv  annotate_landuse.csv  annotate_persons.csv  annotate_persons_after_hh.csv  auto_ownership.csv  auto_ownership.yaml  auto_ownership_coefficients.csv  cdap_coefficients.csv  cdap_indiv_and_hhsize1.csv  constants.yaml  initialize_households.yaml  internal_destination_choice_size_terms.csv  ldtExternalDestinationFrequencies.csv  ldt_complete_tour_scheduling.csv  ldt_complete_tour_scheduling_coefficients.csv  ldt_external_destchoice.yaml  ldt_external_destchoice_probabilities.csv  ldt_external_mode_choice.csv  ldt_external_mode_choice.yaml  ldt_external_mode_choice_coefficients.csv  ldt_external_mode_choice_coefficients_template.csv  ldt_internal_external.csv  ldt_internal_external.yaml  ldt_internal_external_coefficient_template.csv  ldt_internal_external_coefficients.csv  ldt_internal_mode_choice.csv  (+24 more)
(+12 files in other folders)
